# SOCPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/socpu/: sim.hpp  soarchv2.hpp  vm.hpp
src/: alu.hpp  ucode_gen.hpp
src/sim/: alu.hpp  fn_rom.hpp  rect_board.hpp
src/soarchv2/: arch.hpp  cpu.hpp  regs.hpp  soisv1.cpp  ucode.cpp  ucode.hpp
